Implemented a visit recommendation algorithm v8