@@ -14,7 +14,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -190,6 +192,7 @@ public class AvailabilityService {
     }
 
     // Algorytm rekomendacji
+    private static final int DEFAULT_MAX_DAYS = 7;
     public List<AvailabilityDto> getRecommendations(String date, String specialization, Long doctorId) {
         logger.info("Rozpoczynanie generowania rekomendacji...");
         logger.info("Podane kryteria - Data: {}, Specjalizacja: {}, ID Lekarza: {}", date, specialization, doctorId);
@@ -197,7 +200,7 @@ public class AvailabilityService {
         List<Availability> allAppointments = availabilityRepository.findAll();
         logger.info("Pobrano {} wizyt z bazy danych.", allAppointments.size());
 
-        List<Availability> recommendedAppointments;
+        List<Availability> recommendedAppointments = new ArrayList<>();
 
         // Priorytet 1: Dokładne dopasowanie wszystkich kryteriów
         recommendedAppointments = allAppointments.stream()
@@ -206,22 +209,18 @@ public class AvailabilityService {
                 .filter(a -> specialization == null || a.getSpecialization().equalsIgnoreCase(specialization))
                 .filter(a -> doctorId == null || a.getDoctor().getId().equals(doctorId))
                 .sorted(Comparator.comparing(Availability::getAvailableTime))
-                .collect(Collectors.toList());
+                .toList();
 
         logger.info("Priorytet 1: Znaleziono {} wizyt pasujących dokładnie do podanych kryteriów.", recommendedAppointments.size());
 
-        // Priorytet 2: Ten sam lekarz w innym terminie
+        // Priorytet 2: Szukanie tego samego lekarza w najbliższych terminach (do 7 dni w przód i w tył)
         if (recommendedAppointments.isEmpty() && doctorId != null) {
-            logger.info("Priorytet 2: Szukanie tego samego lekarza w innym terminie...");
-            recommendedAppointments = allAppointments.stream()
-                    .filter(a -> !a.getIsBooked())
-                    .filter(a -> a.getDoctor().getId().equals(doctorId))
-                    .sorted(Comparator.comparing(Availability::getAvailableTime))
-                    .collect(Collectors.toList());
+            logger.info("Priorytet 2: Szukanie tego samego lekarza w najbliższych terminach...");
+            recommendedAppointments = findNearestAppointments(allAppointments, date, doctorId, null);
             logger.info("Priorytet 2: Znaleziono {} wizyt.", recommendedAppointments.size());
         }
 
-        // Priorytet 3: Inny lekarz tej samej specjalizacji w tej samej dacie
+        // Priorytet 3: Szukanie innego lekarza tej samej specjalizacji w tej samej dacie
         if (recommendedAppointments.isEmpty() && date != null && specialization != null) {
             logger.info("Priorytet 3: Szukanie innego lekarza tej samej specjalizacji w tej samej dacie...");
             recommendedAppointments = allAppointments.stream()
@@ -229,29 +228,25 @@ public class AvailabilityService {
                     .filter(a -> a.getAvailableTime().toLocalDate().toString().equals(date))
                     .filter(a -> a.getSpecialization().equalsIgnoreCase(specialization))
                     .sorted(Comparator.comparing(Availability::getAvailableTime))
-                    .collect(Collectors.toList());
+                    .toList();
             logger.info("Priorytet 3: Znaleziono {} wizyt.", recommendedAppointments.size());
         }
 
-        // Priorytet 4: Lekarz tej samej specjalizacji w innym terminie
+        // Priorytet 4: Szukanie lekarza tej samej specjalizacji w innych terminach
         if (recommendedAppointments.isEmpty() && specialization != null) {
-            logger.info("Priorytet 4: Szukanie lekarza tej samej specjalizacji w innym terminie...");
-            recommendedAppointments = allAppointments.stream()
-                    .filter(a -> !a.getIsBooked())
-                    .filter(a -> a.getSpecialization().equalsIgnoreCase(specialization))
-                    .sorted(Comparator.comparing(Availability::getAvailableTime))
-                    .collect(Collectors.toList());
+            logger.info("Priorytet 4: Szukanie lekarza tej samej specjalizacji w innych terminach...");
+            recommendedAppointments = findNearestAppointments(allAppointments, date, null, specialization);
             logger.info("Priorytet 4: Znaleziono {} wizyt.", recommendedAppointments.size());
         }
 
-        // Priorytet 5: Lekarze podstawowej opieki zdrowotnej
+        // Priorytet 5: Lekarze podstawowej opieki zdrowotnej (internista, POZ)
         if (recommendedAppointments.isEmpty()) {
             logger.info("Priorytet 5: Szukanie wizyt lekarzy podstawowej opieki zdrowotnej...");
             recommendedAppointments = allAppointments.stream()
                     .filter(a -> !a.getIsBooked())
                     .filter(a -> a.getSpecialization().equalsIgnoreCase("internista") || a.getSpecialization().equalsIgnoreCase("poz"))
                     .sorted(Comparator.comparing(Availability::getAvailableTime))
-                    .collect(Collectors.toList());
+                    .toList();
             logger.info("Priorytet 5: Znaleziono {} wizyt.", recommendedAppointments.size());
         }
 
@@ -267,4 +262,56 @@ public class AvailabilityService {
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Znajdź najbliższe dostępne wizyty dla podanych kryteriów (data, lekarz, specjalizacja).
+     */
+    private List<Availability> findNearestAppointments(List<Availability> allAppointments, String date, Long doctorId, String specialization) {
+        List<Availability> results = new ArrayList<>();
+        try {
+            LocalDate targetDate = date != null ? LocalDate.parse(date) : null;
+
+            for (int range = 1; range <= DEFAULT_MAX_DAYS; range++) {
+                final int currentRange = range; // Tworzymy finalną zmienną dla lambdy
+                final LocalDate currentTargetDate = targetDate; // Finalna zmienna dla lambdy
+
+                List<Availability> filtered = allAppointments.stream()
+                        .filter(a -> !a.getIsBooked())
+                        .filter(a -> doctorId == null || a.getDoctor().getId().equals(doctorId))
+                        .filter(a -> specialization == null || a.getSpecialization().equalsIgnoreCase(specialization))
+                        .filter(a -> isWithinDateRange(a, currentTargetDate, currentRange)) // Wywołanie funkcji pomocniczej
+                        .sorted(Comparator.comparing(Availability::getAvailableTime))
+                        .toList(); // Użycie .toList() zamiast Collectors.toList()
+
+                results.addAll(filtered);
+                if (!results.isEmpty()) break; // Przerwij, jeśli znaleziono wyniki w obecnym zakresie
+            }
+
+            // Jeśli brak wyników, znajdź pierwsze dostępne terminy
+            if (results.isEmpty()) {
+                results = allAppointments.stream()
+                        .filter(a -> !a.getIsBooked())
+                        .filter(a -> doctorId == null || a.getDoctor().getId().equals(doctorId))
+                        .filter(a -> specialization == null || a.getSpecialization().equalsIgnoreCase(specialization))
+                        .sorted(Comparator.comparing(Availability::getAvailableTime))
+                        .toList();
+            }
+
+        } catch (Exception e) {
+            logger.error("Błąd podczas wyszukiwania najbliższych wizyt: {}", e.getMessage());
+        }
+
+        return results;
+    }
+
+    /**
+     * Funkcja pomocnicza sprawdzająca, czy termin jest w określonym zakresie dat.
+     */
+    private boolean isWithinDateRange(Availability availability, LocalDate targetDate, int range) {
+        if (targetDate != null) {
+            LocalDate appointmentDate = availability.getAvailableTime().toLocalDate();
+            return appointmentDate.isEqual(targetDate) ||
+                    (appointmentDate.isAfter(targetDate.minusDays(range)) && appointmentDate.isBefore(targetDate.plusDays(range)));
+        }
+        return true;
+    }
 }
